# Rust

./: .gitignore  README.md  Rust.txt
bm/: Cargo.toml  README.md
bm/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello-rust/: Cargo.toml  README.md
viv/: Cargo.toml  README.md  r.sh
viv-book/src/: main.rs
viv-bootcamp/hello_world/src/: main.rs
viv-camp/: Cargo.toml  README.md  r
viv-camp/src/: main.rs
viv-demo/src/: func.rs
viv-helloworld/: Cargo.toml
viv/assets/text/: data.txt
viv/bootcamp/: Cargo.toml
viv/bootcamp/src/: closure.rs  lib.rs  result.rs  structs.rs  usererror.rs
viv/viv/: Cargo.toml
viv/viv/src/: main.rs
viv_baekjoon/: Cargo.toml  run.sh
viv_baekjoon/src/: baekjoon.rs  baekjoon_b.rs  baekjoon_c.rs  generic.rs  generic_ex.rs  main.rs  playground.rs  trait_ex.rs
viv_book/: Cargo.toml
viv_book/src/: main.rs
viv_bootcamp/hello_world/src/: a_001.rs
viv_bootcamp/start-camp/: Cargo.toml
viv_bootcamp/start-camp/src/: main.rs
viv_camp/: Cargo.toml  README.md  r  vivakr.db
viv_camp/src/: main.rs
viv_demo/: Cargo.toml  run.sh
viv_demo/src/: array_.rs  for_.rs  func.rs  if_.rs  loop_.rs  main.rs  match_.rs  print.rs  regex_.rs  tupple_.rs  var.rs  while_.rs
viv_demo/src/libs/: demo.rs
viv_ex/: cargo.toml
viv_ex/ex/: Cargo.toml
viv_helloworld/: Cargo.toml  README.md
viv_helloworld/src/: main.rs
viv_tutor/: Cargo.toml
viv_tutor/src/: main  main.rs
viv_tutorial/: Cargo.toml  README.md  args.txt  demo.txt  run.sh
viv_tutorial/adder/src/: lib.rs
viv_tutorial/common/: Cargo.toml
viv_tutorial/common/src/: algorithm.rs  closures.rs  data_encrpt.rs  datatype.rs  function.rs  generic.rs  interface.rs  iterator.rs  lib.rs  loop_a.rs  ownership.rs  panic_result.rs  some.rs  std_deviation.rs  strings.rs  structs.rs  vectors.rs  viv_listener.rs  viv_macros.rs
viv_tutorial/communicator/: Cargo.toml
viv_tutorial/communicator/src/: client.rs
viv_tutorial/communicator/src/network/: mod.rs  server.rs
viv_tutorial/snippet/: Cargo.toml
viv_tutorial/snippet/src/: example.rs
viv_tutorial/src/: main.rs
viv_tutorial/util/: Cargo.toml
viv_tutorial/util/src/: baekjoon.rs  lib.rs  start.rs
