[package]
name = "hello-rust"
version = "0.1.0"
rust-version = "1.74.1"
edition = "2021"
authors = ["Kim Bum Jun <admin@vivabj.com>"]
homepage = "https://vivabm.com"
readme = "README.md"
repository = "https://github.com/ViVaKR/Rust.git"
license = "MIT OR Apache-2.0"
description = "First Rust Project"
keywords = ["helloworld","bootcamp"]
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
