[package]
name = "viv-camp"
version = "0.1.0"
rust-version = "1.76.0"
edition = "2021"
authors = ["Kim Bum Jun <admin@vivabj.com>"]
homepage = "https://vivabm.com"
readme = "README.md"
repository = "https://github.com/ViVaKR/Rust.git"
license = "MIT"
description = "BootCamp Project"
keywords = ["bootcamp", "beginner"]

[dependencies]
rand = "0.8.5"

