[package]
name = "viv_helloworld"
version = "0.1.0"
rust-version = "1.74.1"
edition = "2021"
authors = ["Kim Bum Jun <admin@vivabj.com>"]
homepage = "https://vivabm.com"
readme = "README.md"
repository = "https://github.com/ViVaKR/Rust.git"
license = "MIT"
description = "First Rust Project"
keywords = ["helloworld","bootcamp"]

[dependencies]
