workspace = { members = ["communicator", "snippet", "util"] }

[package]
name = "viv_tutorial"
version = "0.1.0"
edition = "2021"
authors = ["Kim Bum Jun <admin@vivabj.com>"]
homepage = "https://vivabm.com"
readme = "README.md"
repository = "https://github.com/ViVaKR/Rust.git"
license = "MIT"

[dependencies]
snippet = { path = "snippet" }
util = { path = "util" }
communicator = { path = "communicator" }
rand = "0.8.5"
data-encoding = "2.5.0"
ansi_term = "0.12.1"
rusqlite = "0.31.0"
ring = "0.17.8"
clearscreen = "3.0.0"
