[package]
name = "ex"
version = "0.1.0"
edition = "2021"
authors = ["Kim Bum Jun <admin@vivabj.com>"]
homepage = "https://vivabm.com"
readme = "README.md"
repository = "https://github.com/ViVaKR/Rust.git"
license = "MIT"
description = "Rust Example"
keywords = ["rust", "example"]

[dependencies]
libs = { path = "../libs" }
